--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_nkame">Exe3</string>
+    <string name="app_name">Exe3</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="Verifypassword">Verify password</string>
